# A-Problem-solving-in-CPP--solved-in-jun-2022--

./: SHEET LINK.txt
Practice Contest #1/: A-PaintingBallswithAtCoDeer.cpp  B-ABCxxx.cpp  C-VasyatheHipster.cpp  CMakeLists.txt  D-Grouping2.cpp  E-Multiplication2.cpp  F-MagicNumbers.cpp  G-CanYouBuyThemAll.cpp  main.cpp
Week #1( Variables, Data types, IO)/: A-FourPoints.cpp  A-Watermelon.cpp  CMakeLists.txt  D-GetCloser.cpp  E-Horizon.cpp  F-Rotate.cpp  G-WaterPressure.cpp  H-IntegerDivision.cpp  I-CirclePond.cpp  J-FerrisWheel.cpp  K-Dodecagon.cpp  L-EatingSymbolsEasy.cpp  M-BichromeCells.cpp  N-kcal.cpp  O-Trapezoids.cpp  P-TakandHotels.cpp  main.cpp
Week #2( If conditions , loops )/: A-EdgeChecker.cpp  B-T-shirt.cpp  C-NotOverflow.cpp  CMakeLists.txt  D-MatrixTransposition.cpp  E-FizzBuzzSum.cpp  F-Battle.cpp  G-Algae.cpp  H-Airplane.cpp  I-TorT.cpp  J-UnevenNumbers.cpp  K-+-x.cpp  L-OnandOff.cpp  M-Restaurant.cpp  N-TrainingCamp.cpp  O-HonestOrDishonest.cpp  P-Grouping.cpp  Q-PictureFrame.cpp  R-RingoFavoriteNumbers.cpp  S-CatsandDogs.cpp  T-HarshadNumber.cpp  U-KnightFork.cpp  V-IrohaAndHaiku.cpp  W-ChildrenandCandies.cpp  main.cpp
Week #3 ( Strings )/: A-MoveRight.cpp  B-LastLetter.cpp  C-Rotate.cpp  CMakeLists.txt  D-AReverse.cpp  E-CaesarCipher.cpp  F-WayTooLongWords.cpp  G-LuckyDivision.cpp  H-Registration.cpp  I-Tenki.cpp  J-TapDance.cpp  K-NextAlphabet.cpp  L-EatingSymbolsEasy.cpp  M-September9.cpp  N-PalindromicNumber.cpp  O-HappyNewYear.cpp  P-StudyingAlphabet.cpp  Q-UnhappyHacking.cpp  R-BeautifulString.cpp  S-CardGameforThree.cpp
Week #3(Arrays)/: A-DigitMachine.cpp  B-Pasta.cpp  C-WhoIsMissing.cpp  CMakeLists.txt  D-Alcoholic.cpp  E-RollerCoaster.cpp  F-IrohaLovesStrings.cpp  G-Thin.cpp  H-Team.cpp  I-PapersPlease.cpp  J-AchieveTheGoal.cpp  K-LongestSegment.cpp  L-ClimbingTakahashi.cpp  M-HitAndBlow.cpp  main.cpp
Week #4 ( Functions and Built-in Libraries )/: A-HelpingChef.cpp  B-Mex.cpp  C-CountDistinctIntegers.cpp  CMakeLists.txt  D-Pizza.cpp  E-ServalvsMonster.cpp  F-TheNumberofEvenPairs.cpp  G-ComparingStrings.cpp  H-IMissYou.cpp  I-Digits.cpp  N-PuppyandSum.cpp  main.cpp
