cmake_minimum_required(VERSION 3.21)
project(Practice_Contest__1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practice_Contest__1 main.cpp)
add_executable(A-PaintingBallswithAtCoDeer A-PaintingBallswithAtCoDeer.cpp)
add_executable(B-ABCxxx B-ABCxxx.cpp)
add_executable(C-VasyatheHipster C-VasyatheHipster.cpp)
add_executable(D-Grouping2 D-Grouping2.cpp)
add_executable(E-Multiplication2 E-Multiplication2.cpp)
add_executable(F-MagicNumbers F-MagicNumbers.cpp)
add_executable(G-CanYouBuyThemAll G-CanYouBuyThemAll.cpp)
