cmake_minimum_required(VERSION 3.21)
project(Problems_A)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problems_A main.cpp)
add_executable(A-Watermelon A-Watermelon.cpp)
add_executable(A-FourPoints A-FourPoints.cpp)
add_executable(D-GetCloser D-GetCloser.cpp)
add_executable(E-Horizon E-Horizon.cpp)
add_executable(F-Rotate F-Rotate.cpp)
add_executable(G-WaterPressure G-WaterPressure.cpp)
add_executable(H-IntegerDivision H-IntegerDivision.cpp)
add_executable(I-CirclePond I-CirclePond.cpp)
add_executable(J-FerrisWheel J-FerrisWheel.cpp)
add_executable(K-Dodecagon K-Dodecagon.cpp)
add_executable(L-EatingSymbolsEasy L-EatingSymbolsEasy.cpp)
add_executable(M-BichromeCells M-BichromeCells.cpp)
add_executable(N-kcal N-kcal.cpp)
add_executable(O-Trapezoids O-Trapezoids.cpp)
add_executable(P-TakandHotels P-TakandHotels.cpp)
