cmake_minimum_required(VERSION 3.21)
project(Week_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Week_2 main.cpp)
add_executable(A-EdgeChecker A-EdgeChecker.cpp)
add_executable(B-T-shirt B-T-shirt.cpp)
add_executable(C-NotOverflow C-NotOverflow.cpp)
add_executable(D-MatrixTransposition D-MatrixTransposition.cpp)
add_executable(E-FizzBuzzSum E-FizzBuzzSum.cpp)
add_executable(F-Battle F-Battle.cpp)
add_executable(G-Algae G-Algae.cpp)
add_executable(H-Airplane H-Airplane.cpp)
add_executable(I-TorT I-TorT.cpp)
add_executable(J-UnevenNumbers J-UnevenNumbers.cpp)
add_executable(K-+-x K-+-x.cpp)
add_executable(L-OnandOff L-OnandOff.cpp)
add_executable(M-Restaurant M-Restaurant.cpp)
add_executable(N-TrainingCamp N-TrainingCamp.cpp)
add_executable(O-HonestOrDishonest O-HonestOrDishonest.cpp)
add_executable(P-Grouping P-Grouping.cpp)
add_executable(Q-PictureFrame Q-PictureFrame.cpp)
add_executable(R-RingoFavoriteNumbers R-RingoFavoriteNumbers.cpp)
add_executable(S-CatsandDogs S-CatsandDogs.cpp)
add_executable(T-HarshadNumber T-HarshadNumber.cpp)
add_executable(U-KnightFork U-KnightFork.cpp)
add_executable(V-IrohaAndHaiku V-IrohaAndHaiku.cpp)
add_executable(W-ChildrenandCandies W-ChildrenandCandies.cpp)

