cmake_minimum_required(VERSION 3.21)
project(Week__3___Strings__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Week__3___Strings__ main.cpp)
add_executable(A-MoveRight A-MoveRight.cpp)
add_executable(B-LastLetter B-LastLetter.cpp)
add_executable(C-Rotate C-Rotate.cpp)
add_executable(D-AReverse D-AReverse.cpp)
add_executable(E-CaesarCipher E-CaesarCipher.cpp)
add_executable(F-WayTooLongWords F-WayTooLongWords.cpp)
add_executable(G-LuckyDivision G-LuckyDivision.cpp)
add_executable(H-Registration H-Registration.cpp)
add_executable(I-Tenki I-Tenki.cpp)
add_executable(J-TapDance J-TapDance.cpp)
add_executable(K-NextAlphabet K-NextAlphabet.cpp)
add_executable(L-EatingSymbolsEasy L-EatingSymbolsEasy.cpp)
add_executable(M-September9 M-September9.cpp)
add_executable(N-PalindromicNumber N-PalindromicNumber.cpp)
add_executable(O-HappyNewYear O-HappyNewYear.cpp)
add_executable(P-StudyingAlphabet P-StudyingAlphabet.cpp)
add_executable(Q-UnhappyHacking Q-UnhappyHacking.cpp)
add_executable(R-BeautifulString R-BeautifulString.cpp)
add_executable(S-CardGameforThree S-CardGameforThree.cpp)
