cmake_minimum_required(VERSION 3.21)
project(Week_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Week_3 main.cpp)
add_executable(A-DigitMachine A-DigitMachine.cpp)
add_executable(B-Pasta B-Pasta.cpp)
add_executable(C-WhoIsMissing C-WhoIsMissing.cpp)
add_executable(D-Alcoholic D-Alcoholic.cpp)
add_executable(E-RollerCoaster E-RollerCoaster.cpp)
add_executable(F-IrohaLovesStrings F-IrohaLovesStrings.cpp)
add_executable(G-Thin G-Thin.cpp)
add_executable(H-Team H-Team.cpp)
add_executable(I-PapersPlease I-PapersPlease.cpp)
add_executable(J-AchieveTheGoal J-AchieveTheGoal.cpp)
add_executable(K-LongestSegment K-LongestSegment.cpp)
add_executable(L-ClimbingTakahashi L-ClimbingTakahashi.cpp)
add_executable(M-HitAndBlow M-HitAndBlow.cpp)